--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
+    "@ornikar/prettier-config": "4.0.1",
     "jest": "27.4.7",
     "prettier": "2.5.1"
   },
-  "jest": {
-  }
+  "jest": {}
 }
